--- a/src/containers/Main.scss
+++ b/src/containers/Main.scss
@@ -1,7 +1,7 @@
 @import "../_globalColor";
 
 .dark-mode {
-  background-color: $darkBackground;
+  background-color: $darkBackground !important;
   color: white;
   transition: "0.1s";
 }
